--- a/store/index.html
+++ b/store/index.html
@@ -90,7 +90,7 @@
 
         <div class="swiper-wrapper">
 
-            <a href="https://bookinsman.github.io/" class="swiper-slide box"> 
+            <a href="https://bookinsman.github.io/chat" class="swiper-slide box"> 
                 <div class="image">
                     <img src="image/book-1.png" alt="">
                 </div>
