--- a/store/index.html
+++ b/store/index.html
@@ -95,7 +95,7 @@
                     <img src="image/book-1.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>Knygų klubas</h3>
                     <div class="price"> <span></span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -192,7 +192,7 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-1.png" alt="">
+                    <img src="image/book-3.png" alt="">
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
@@ -226,7 +226,7 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-3.png" alt="">
+                    <img src="image/book-1.png" alt="">
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
@@ -289,7 +289,7 @@
     
                 <a href="#" class="swiper-slide box">
                     <div class="image">
-                        <img src="image/book-1.png" alt="">
+                        <img src="image/book-5.png" alt="">
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
@@ -306,7 +306,7 @@
     
                 <a href="#" class="swiper-slide box">
                     <div class="image">
-                        <img src="image/book-2.png" alt="">
+                        <img src="image/book-4.png" alt="">
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
