--- a/store/index.html
+++ b/store/index.html
@@ -23,7 +23,9 @@
 
     <div class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> BookinsMan </a>
+        class="image"> <img src="logos" alt="">
+    
+
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
