--- a/store/index.html
+++ b/store/index.html
@@ -23,9 +23,9 @@
 
     <div class="header-1">
 
-        class="image"> <img src="logos" alt="">
-    
-
+     <div class="image">
+            <img src="image/logos.png" alt="">
+        </div>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
