--- a/store/index.html
+++ b/store/index.html
@@ -23,7 +23,7 @@
 
     <div class="header-1">
 
-        class="image"> <img src="logos" alt="">
+        <a href="#" class="logo"> <i class="fas fa-book"></i> BookinsMan </a>
     
 
 
