--- a/store/index.html
+++ b/store/index.html
@@ -14,6 +14,9 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="css/kinul.css">
+
 </head>
 <body>
     
@@ -80,9 +83,7 @@
 
     <div class="row">
 
-
-
-
+  
         <div class="swiper books-slider">
             <div class="swiper-wrapper">
                 <a href="#" class="swiper-slide"><img src="image/book-1.png" alt=""></a>
