--- a/store/index.html
+++ b/store/index.html
@@ -53,7 +53,7 @@
                     linkę tikrinti savo telefonus, o ne knygą, 
                     daugiausia dėmesio skyrėme interaktyvios skaitymo patirties kūrimui, 
                     kad mokymasis būtų įdomus ir aktualus šiandieninei kartai.</p>
-                
+                    <a href="#" class="btn">Prenumeruoti</a>
             </div>
         
             <div class="image">
