--- a/store/index.html
+++ b/store/index.html
@@ -635,100 +635,27 @@
 </section>
 
 
+<section class="steps">
 
 
-<section class="container py-5">
+    <section class="container py-5">
 
-    <div class="container py-5">
-        <div class="output" id="output">
-          <h1 class="cursor"></h1>
-          <p></p>
-        </div>
-      </div>
-
-</section>
-
-
-
-
-<!-- blogs section starts  -->
-
-<section 
-
-   class="blogs" id="blogs">
-
-
-
-    <section></section>
+        <div class="container py-5">
+            <div class="output" id="output">
+              <h1 class="cursor"></h1>
+              <p></p>
+            </div>
+          </div>
     
-    <h1 class="heading"> <span>Tinklaraštis</span> </h1>
-
-    <div class="swiper blogs-slider">
-
-        <div class="swiper-wrapper">
-
-            <div class="swiper-slide box">
-                <div class="image">
-                    <img src="image/blog-1.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <div class="image">
-                    <img src="image/blog-2.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <div class="image">
-                    <img src="image/blog-3.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <div class="image">
-                    <img src="image/blog-4.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <div class="image">
-                    <img src="image/blog-5.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-        </div>
+    </section>
 
     </div>
-
+    
 </section>
 
-<!-- blogs section ends -->
+
+
+
 
 
 <!-- footer section starts  -->
