--- a/store/index.html
+++ b/store/index.html
@@ -76,19 +76,19 @@
         <div class="box">
             <img src="image/icona.png" alt="">
             <h3>Žinios kitaip</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ducimus.</p>
+            <p>Įskiepik svarbiausią gyvenimo įgūdį, tai meilę mokytis!</p>
         </div>
 
         <div class="box">
             <img src="image/icona2.png" alt="">
             <h3>Istorija po istorijos </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ducimus.</p>
+            <p>Daugiau, nei 25 būtiniausios temos, kurias norėsis perskaityti iki galo!</p>
         </div>
 
         <div class="box">
             <img src="image/icona3.png" alt="">
             <h3>Vienas paspaudimas</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ducimus.</p>
+            <p>Dabar tapo lengviau, nei bet kada pažint save ir pasaulį. Užtenka vieno paspaudimo!</p>
         </div>
 
     </div>
