--- a/store/index.html
+++ b/store/index.html
@@ -96,7 +96,7 @@
         <div class="box">
             <img src="image/icona2.png" alt="">
             <h3>Istorija po istorijos </h3>
-            <p>Daugiau, nei 25 būtiniausios temos, kurias norėsis perskaityti iki galo!</p>
+            <p>Daugiau, nei 20 būtiniausių temų, kurias norėsis perskaityti iki galo!</p>
         </div>
 
         <div class="box">
@@ -181,18 +181,6 @@
                 </div>
                 <div class="content">
                     <h3>Technologijos</h3>
-                    <div class="price"> <span></span></div>
-
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-    
-                <div class="image">
-                    <img src="image/book-6.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Našumas</h3>
                     <div class="price"> <span></span></div>
 
                 </div>
@@ -299,23 +287,6 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-10.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Gamta ir aplinka</h3>
-                    <div class="price"> <span></span></div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-            </a>
-
-            <a href="#" class="swiper-slide box">
-                <div class="image">
                     <img src="image/book-11.png" alt="">
                 </div>
                 <div class="content">
@@ -341,23 +312,6 @@
     <div class="swiper arrivals-slider">
 
         <div class="swiper-wrapper">
-
-            <a href="#" class="swiper-slide box">
-                <div class="image">
-                    <img src="image/book-12.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Visuomenė ir kultūra</h3>
-                    <div class="price"> <span></span></div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-            </a>
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
@@ -483,23 +437,7 @@
                 </div>
             </a>
 
-            <a href="#" class="swiper-slide box">
-                <div class="image">
-                    <img src="image/book-19.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Verslumas</h3>
-                    <div class="price"> <span></span></div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-            </a>
-
+        
             <a href="#" class="swiper-slide box">
                 <div class="image">
                     <img src="image/book-20.png" alt="">
@@ -598,22 +536,6 @@
                 </div>
             </a>
 
-            <a href="#" class="swiper-slide box">
-                <div class="image">
-                    <img src="image/book-25.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>Dizaino mąstymas</h3>
-                    <div class="price"> <span></span></div>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-            </a>
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
