--- a/store/index.html
+++ b/store/index.html
@@ -33,7 +33,7 @@
                 <ul><a href="#home">Apie mus</a>
                     <a href="#featured">Produktai</a>
                     <a href="#arrivals">Kas viduje</a>
-                    <a href="#blogs">Tinklaraštis</a>
+                    <a href="#footer">Kontaktai</a>
                 </ul>
         </nav>
     </div>
@@ -96,13 +96,13 @@
         <div class="box">
             <img src="image/icona2.png" alt="">
             <h3>Istorija po istorijos </h3>
-            <p>Daugiau, nei 20 būtiniausių temų, kurias norėsis perskaityti iki galo!</p>
+            <p>Ypatingos temos, kurias norėsis perskaityti iki galo!</p>
         </div>
 
         <div class="box">
             <img src="image/icona3.png" alt="">
             <h3>Vienas paspaudimas</h3>
-            <p>Dabar tapo lengviau, nei bet kada pažint save ir pasaulį. Užtenka vieno paspaudimo!</p>
+            <p>Dabar tapo lengviau, nei bet kada įgyti žinių. Užtenka vieno paspaudimo!</p>
         </div>
 
     </div>
@@ -242,7 +242,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                     <div class="price"> <span></span></div>
                     <div class="stars">
@@ -263,7 +263,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -280,7 +280,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -297,7 +297,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -325,7 +325,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -343,7 +343,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -360,7 +360,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -377,7 +377,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -415,7 +415,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -432,7 +432,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -451,7 +451,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -468,7 +468,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -496,7 +496,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -514,7 +514,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -531,7 +531,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -549,7 +549,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                 </div>
             </a>
@@ -580,7 +580,7 @@
 
 <!-- footer section starts  -->
 
-<section class="footer">
+<section class="footer" id="footer">
 
     <div class="box-container">
 
