--- a/chat/index.html
+++ b/chat/index.html
@@ -3,60 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta
+      name="viewport"
+   /> -->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="./bubble.css" />
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
   </head>
   <body class="grid-bg ba-grid anim">
     <!-- <div class=" main"> -->
-      <div class="head"></div>
-      <div class="welcome" id="welcome">
-        <p>Pradėti
-        </p>
+    <div class="head"></div>
+    <div class="welcome" id="welcome">
+      <p>Welcome !</p>
+    </div>
+    <div id="story" class="inner"></div>
+    <div class="foot">
+      <div class="progress-div">
+        <progress id="progress" value="32" max="100">32%</progress>
       </div>
-      <div id="story" class="inner"></div>
-      <div class="foot">
-        <div class="progress-div">
-          <progress id="progress" value="32" max="100">32%</progress>
-        </div>
 
-        <div class="link-div">
-          <div class="dropup">
-            <img src="./images/link.png" alt="" width="60px" class="link-img"/>
-            <div class="dropup-content">
-              <h3>Share via</h3>
-              <div>
-                <a href="https://www.facebook.com/" target="_blank">
-                  <img
-                    src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
-                    alt=""
-                  />
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
-                    alt=""
-                /></a>
-                <a href="https://www.twitter.com/" target="_blank">
-                  <img
-                    src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
-                    alt=""
-                /></a>
-                <a href="https://www.whatsapp.com/" target="_blank">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
-                    alt=""
-                /></a>
-              </div>
+      <div class="link-div">
+        <div class="dropup">
+          <img src="./images/link.png" alt="" width="60px" class="link-img" />
+          <div class="dropup-content">
+            <h3>Share via</h3>
+            <div>
+              <a href="https://www.facebook.com/" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://www.twitter.com/" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://www.whatsapp.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
             </div>
           </div>
         </div>
-
-        <button class="touch-div">
-          <img src="./images/touch.png" alt="" width="80px" />
-        </button>
       </div>
-      <!-- <div style="width: 100%;">
+
+      <button class="touch-div">
+        <img src="./images/touch.png" alt="" width="60px" />
+      </button>
+    </div>
+    <!-- <div style="width: 100%;">
         <hr />
         <div class="action">
           <a href="https://www.knyguklubas.lt/" target="_blank">!</a>
