--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,6 @@
         <div class="dropup">
           <img src="./images/link.png" alt="" width="60px" class="link-img" />
           <div class="dropup-content">
-            <h3>Share via</h3>
             <div>
               <a href="https://bookinsman.github.io/chat" target="_blank">
                 <img
@@ -47,6 +46,80 @@
               <a href="https://www.whatsapp.com/" target="_blank">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://www.twitter.com/" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://www.whatsapp.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://www.twitter.com/" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://www.whatsapp.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://www.twitter.com/" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://www.whatsapp.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://www.instagram.com/" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
                   alt=""
               /></a>
             </div>
