--- a/chat/index.html
+++ b/chat/index.html
@@ -21,8 +21,112 @@
       <div class="progress-div">
         <progress id="progress" value="32" max="100">32%</progress>
       </div>
-
-
+      
+      <div class="link-div">
+        <div class="dropup">
+          <img src="./images/link.png" alt="" width="60px" class="link-img" />
+          <div class="dropup-content">
+            <div>
+              <a href="https://bookinsman.github.io/chat" target="_blank">
+                <img
+                  src="https://lh3.googleusercontent.com/5DEKR7A_khBIz8dGsj4WSEWtB9v3Z0GMtMC5WcgDqt9UGhxadNLXVFQS4qS7TnGAGSUr2txRpSTamMecNmhq7UcaO4LDBfFYXqY7_kWLO7meKHvWjtl7BV3IVohjpZvCR0k4d6u40A=w2400"
+                  alt=""
+                />
+              </a>
+              <a href="https://bookinsman.github.io/chat2" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat3" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat4" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat5" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://bookinsman.github.io/chat6" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat7n" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat8d" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat9er" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://bookinsman.github.io/chat10pt" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat11ga" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat12po" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat13tb" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://bookinsman.github.io/chat14go" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat15on" target="_blank">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat16ra" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png"
+                  alt=""
+              /></a>
+              <a href="https://bookinsman.github.io/chat17me" target="_blank">
+                <img
+                  src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
+                  alt=""
+                />
+              </a>
+              <a href="https://bookinsman.github.io/chat18fa" target="_blank">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png"
+                  alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <button class="touch-div">
         <img src="./images/touch.png" alt="" width="76px" />
       </button>
