--- a/store/index.html
+++ b/store/index.html
@@ -564,20 +564,12 @@
     <div class="box-container">
 
         <div class="box">
-            <h2>Taisyklės ir sąlygos
-            </h2>
-            <a href="#"> <i class="fas fa-arrow-right"></i> Dokumentacija
+            <a href="https://bookinsman.github.io/terms"> <i class="fas fa-arrow-right"></i> Taisyklės ir sąlygos
             </a>
         </div>
 
         <div class="box">
-            <h2>Apmokėjimai</h2>
-            <a href="#"> <i class="fas fa-arrow-right"></i> mokėjimo būdas </a>
-        </div>
-
-        <div class="box">
-            <h2>Mūsų paslauga</h2>
-            <a href="#"> <i class="fas fa-arrow-right"></i> kas viduje </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Privatumo politika </a>
         </div>
 
         <div class="box">
