--- a/store/index.html
+++ b/store/index.html
@@ -569,7 +569,7 @@
         </div>
 
         <div class="box">
-            <a href="#"> <i class="fas fa-arrow-right"></i> Privatumo politika </a>
+            <a href="https://bookinsman.github.io/policy"> <i class="fas fa-arrow-right"></i> Privatumo politika </a>
         </div>
 
         <div class="box">
