--- a/store/index.html
+++ b/store/index.html
@@ -574,9 +574,9 @@
 
         <div class="box">
             <h2>Kontaktinė informacija</h2>
-            <a href="869512930"> <i class="fas fa-phone"></i> 869512930 </a>
+            <a href=""> <i class="fas fa-phone"></i> 869512930 </a>
 
-            <a href="bookinsman@gmail.com"> <i class="fas fa-envelope"></i> bookinsman@gmail.com </a>
+            <a href=""> <i class="fas fa-envelope"></i> bookinsman@gmail.com </a>
         </div>
         
     </div>
