--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <p>„BookinsMan“ yra geriausias būdas išlaikyti savo smegenis aštrias. 
             Sužinokite daugiau su mažiau pastangų. 
             Įgyvendink savo mokymosi tikslus per trečdalį laiko, kurio prireiktų įprastinei knygai perskaityti. 
-            Smagios interaktyvios istorijos, kurios paliks pilna galva vertingų žinių ir supratimo
+            Smagios interaktyvios istorijos, kurios paliks pilną galvą vertingų žinių ir supratimo
             apie gyvenimą ir jo aplinkybes. </p>
     </div>
 
