--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
 
 <section class="nanik">
 
+    
+
     <div class="image">
-        <img src="image/left.png" alt="">
+        <a href="https://lh3.googleusercontent.com/tDoannJr-kTzNMrvfDnKcRa_17QU84tb72VP3TmF016CQQleazJQMHBXCtdKB2SFR5BDXiNKP6HAv0EumNKU7e-8Fviw5SMvyf_FLYwBEbREJgF88SXxSGsCJUCUcE_H7ROAFZKJgQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/tDoannJr-kTzNMrvfDnKcRa_17QU84tb72VP3TmF016CQQleazJQMHBXCtdKB2SFR5BDXiNKP6HAv0EumNKU7e-8Fviw5SMvyf_FLYwBEbREJgF88SXxSGsCJUCUcE_H7ROAFZKJgQ=w600-h315-p-k" /> </a>
     </div>
 
     <div class="content">
