--- a/store/index.html
+++ b/store/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bookinsman</title>
+    <title>BookinsMan</title>
+    <link rel="icon" href="https://lh3.googleusercontent.com/IyszhWdJL84GfsuveItKzSRaYvLDflOdDAn22OhNulCV7Gf2c-0TXOVhZPe5lnCjuRc5JnFAD_OMhHKK_86bQVdRFOMNGj11NXFZMzrb3FeFFP4PIHbbpw1LZcjRzFFoxLOA23E2GQ=w2400" type="image/icon type">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
