--- a/ebook/index.html
+++ b/ebook/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Skaitymo menas 1/6</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
