--- a/chat10pt/index.html
+++ b/chat10pt/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Meta Sapiens - ateities žmogus. #10</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
