--- a/chat12po/index.html
+++ b/chat12po/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Išvyka į parodą. #12</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
