--- a/chat14go/index.html
+++ b/chat14go/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Darbas daro stebuklus. #14</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
