--- a/chat15on/index.html
+++ b/chat15on/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Išradėjo Edisono kelias. #15 </p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
