--- a/chat8d/index.html
+++ b/chat8d/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sveiki !</p>
+      <p>Ar viską galime pagrįsti mokslu? #8</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
