--- a/land/index.html
+++ b/land/index.html
@@ -18,6 +18,8 @@
         <span class="brand">BookinsMan</span>
         <hr> 
         <h3>Nuorodoje yra elektroninė skaityklė</h3>
+        <h2>*Ją išsisaugoti</h2>
+        <hr>
       </div>
 
 <div id="container">
