--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     linkę tikrinti savo telefonus, o ne knygą, 
                     daugiausia dėmesio skyrėme interaktyvios skaitymo patirties kūrimui, 
                     kad mokymasis būtų įdomus ir aktualus šiandieninei kartai.</p>
-                    <a href="#" class="btn">Prenumeruoti</a>
+                    <a href="https://buy.stripe.com/cN21529kmcZy8Mw6os" class="btn">Pirkti 7,45€</a>
             </div>
         
             <div class="image">
