--- a/land/index.html
+++ b/land/index.html
@@ -17,7 +17,7 @@
       <div class="hero-content">
         <span class="brand">BookinsMan</span>
         <hr> 
-        <h3>Nuorodoje yra elektroninė skaityklė</h3>
+        <h3>Nuorodoje yra elektroninė skaityklė, pritaikyta telefonams</h3>
         <h2>*Ją išsisaugoti</h2>
         <hr>
       </div>
