--- a/chat3/index.html
+++ b/chat3/index.html
@@ -27,7 +27,7 @@
           <img src="./images/link.png" alt="" width="60px" class="link-img" />
           <div class="dropup-content">
             <div>
-              <a href="https://bookinsman.github.io/chat" target="_blank">
+              <a href="https://bookinsman.com/ebook/" target="_blank">
                 <img
                   src="https://lh3.googleusercontent.com/cLrZen23jAFgdbW3N_K2ag_PO_EFBSHDfMbSbBC4EvfQRhnaeG7pj7n_TUpd53CGt8_94bXjd87YfVeTmQUMetD6RojkWRQBUAio99nnfOtF109L0sq2jY5qccsAoFkwvPTF5o9BbQ=w2400"
                   alt=""
