--- a/chat16ra/index.html
+++ b/chat16ra/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Noras pirkti. #16</p>
+      <p>Noras pirkti.</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
