--- a/chat9er/index.html
+++ b/chat9er/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Namai - Kelias - Grįžimas #9</p>
+      <p>Namai - Kelias - Grįžimas</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
