--- a/chat11ga/index.html
+++ b/chat11ga/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Psichoanalitiko kabinetas. #11</p>
+      <p>Psichoanalitiko kabinetas.</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
