--- a/chat13tb/index.html
+++ b/chat13tb/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Paslaptingas sodas. #13</p>
+      <p>Paslaptingas sodas.</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
