--- a/chat20da/index.html
+++ b/chat20da/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Kelias iš labirinto. #18</p>
+      <p>Popieriaus fabrikas</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
