--- a/chat17me/index.html
+++ b/chat17me/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Gera sveikata pareina nuo galvos.</p>
+      <p>Gera sveikata</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
