--- a/chat33vf/index.html
+++ b/chat33vf/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Robotų reguliavimas</p>
+      <p>Robotų teisės</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
