--- a/chat35ha/index.html
+++ b/chat35ha/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Kartoninės dėžės</p>
+      <p>Kartono inovacijos</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
