--- a/chat26ko/index.html
+++ b/chat26ko/index.html
@@ -14,7 +14,7 @@
     <!-- <div class=" main"> -->
     <div class="head"></div>
     <div class="welcome" id="welcome">
-      <p>Sniegas, kaip energija</p>
+      <p>Energija iš sniego</p>
     </div>
     <div id="story" class="inner"></div>
     <div class="foot">
