--- a/index.html
+++ b/index.html
@@ -553,18 +553,16 @@
 
 </section> 
 
-<section class="nanik">
+<section class="container">
 
     
 
-    <div class="image">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QFGjRfz18KM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <a href="https://buy.stripe.com/cN21529kmcZy8Mw6os" class="btn">Pirkti 7,45€</a>
-    </div>
+    <div class="container">
+        <iframe src="https://www.youtube.com/embed/QFGjRfz18KM" 
+        frameborder="0" allowfullscreen class="video"></iframe>
+        </div>
 
-    <div class="image">
-        <img src="image/deal-img.png" alt="">
-    </div>
+        <a href="https://buy.stripe.com/cN21529kmcZy8Mw6os" class="btn">Pirkti 7,45€</a>
 
 </section>
 
