--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     
 
     <div class="image">
-        <a href="https://lh3.googleusercontent.com/tDoannJr-kTzNMrvfDnKcRa_17QU84tb72VP3TmF016CQQleazJQMHBXCtdKB2SFR5BDXiNKP6HAv0EumNKU7e-8Fviw5SMvyf_FLYwBEbREJgF88SXxSGsCJUCUcE_H7ROAFZKJgQ=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/tDoannJr-kTzNMrvfDnKcRa_17QU84tb72VP3TmF016CQQleazJQMHBXCtdKB2SFR5BDXiNKP6HAv0EumNKU7e-8Fviw5SMvyf_FLYwBEbREJgF88SXxSGsCJUCUcE_H7ROAFZKJgQ=w600-h315-p-k" /> </a>
+        <img src="" /> </a>
     </div>
 
     <div class="content">
