--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <h1>Žinios kišenėje</h1>
         <p>„BookinsMan“ yra geriausias būdas išlaikyti savo smegenis aštrias. 
             Sužinokite daugiau su mažiau pastangų.  
-            Smagios interaktyvios istorijos, kurios paliks pilną galvą vertingų žinių ir supratimo
+            Smagios istorijos, kurios paliks pilną galvą vertingų žinių ir supratimo
             apie gyvenimą ir jo aplinkybes. </p>
             <a href="https://buy.stripe.com/cN21529kmcZy8Mw6os" class="btn">Pirkti 7,45€</a>
     </div>
