--- a/readbookis/index.html
+++ b/readbookis/index.html
@@ -68,8 +68,8 @@
     </div>
 
     <div class="controls">
-      <a href="https://bookinsman.com/" class="previous">&laquo; Previous</a>
-      <a href="#" class="next">Next &raquo;</a>
+
+      <a href="https://bookinsman.com/readbookis2/" class="next">1/6 &raquo;</a>
     </div>
   <footer>
     <!-- Footer content goes here -->
