--- a/readbookis6/index.html
+++ b/readbookis6/index.html
@@ -86,8 +86,8 @@
     </div>
 
     <div class="controls">
-      <a href="https://bookinsman.com/" class="previous">&laquo; Previous</a>
-      <a href="#" class="next">Next &raquo;</a>
+      <a href="https://bookinsman.com/readbookis5" class="previous">&laquo; 5/6</a>
+      <a href="https://bookinsman.com" class="next"> bookinsMan &raquo;</a>
     </div>
   <footer>
     <!-- Footer content goes here -->
