--- a/readbookis2/index.html
+++ b/readbookis2/index.html
@@ -129,8 +129,8 @@
     </div>
 
     <div class="controls">
-      <a href="https://bookinsman.com/" class="previous">&laquo; Ankstesnis</a>
-      <a href="#" class="next">Sekantis &raquo;</a>
+      <a href="https://bookinsman.com/readbookis" class="previous">&laquo; 1/6</a>
+      <a href="https://bookinsman.com/readbookis3" class="next">3/6 &raquo;</a>
     </div>
   <footer>
     <!-- Footer content goes here -->
