--- a/readbookis3/index.html
+++ b/readbookis3/index.html
@@ -105,8 +105,8 @@
     </div>
 
     <div class="controls">
-      <a href="https://bookinsman.com/" class="previous">&laquo; Previous</a>
-      <a href="#" class="next">Next &raquo;</a>
+      <a href="https://bookinsman.com/readbookis3" class="previous">&laquo; 3/6</a>
+      <a href="https://bookinsman.com/readbookis4" class="next">4/6 &raquo;</a>
     </div>
   <footer>
     <!-- Footer content goes here -->
