--- a/readbookis4/index.html
+++ b/readbookis4/index.html
@@ -149,8 +149,8 @@
     </div>
 
     <div class="controls">
-      <a href="https://bookinsman.com/" class="previous">&laquo; Previous</a>
-      <a href="#" class="next">Next &raquo;</a>
+      <a href="https://bookinsman.com/readbookis4" class="previous">&laquo; 4/6</a>
+      <a href="https://bookinsman.com/readbookis5" class="next">5/6 &raquo;</a>
     </div>
   <footer>
     <!-- Footer content goes here -->
