--- a/readbookis5/index.html
+++ b/readbookis5/index.html
@@ -147,8 +147,8 @@
                                                             </div>
 
                                                             <div class="controls">
-                                                              <a href="https://bookinsman.com/" class="previous">&laquo; Previous</a>
-                                                              <a href="#" class="next">Next &raquo;</a>
+                                                              <a href="https://bookinsman.com/readbookis5" class="previous">&laquo; 5/6</a>
+                                                              <a href="https://bookinsman.com/readbookis6" class="next">6/6 &raquo;</a>
                                                             </div>
                                                           <footer>
                                                             <!-- Footer content goes here -->
