--- a/readbookis/index.html
+++ b/readbookis/index.html
@@ -53,8 +53,14 @@
 
  <body>
   <div class="container">
-    <h1>"Pradžia"</h1>
+    <h1>"Turinys"</h1>
     <div class="text-container">
+      <h2><strong>"Pradžia"</strong></h2>
+      <h2><strong>"Gimimas"</strong></h2>
+      <h2><strong>"Raida"</strong></h2>
+      <h2><strong>"Liga"</strong></h2>
+      <h2><strong>"Išmintis"</strong></h2>
+      <h2><strong>"Harmonija"</strong></h2>
       <p id="page1">"Tai nėra mitas, pasaka ar palyginimas. Tai tikra istorija, kuri galėjo nutikti prieš šimtą ar tūkstantį metų arba net mūsų laikais, ir ji gali pasikartoti. Ši istorija yra apie jauną žmogų. Jei būsite kantrūs, jums bus atlyginta šimteriopai.”</p> 
       <p>Jaunuolis pasiekė tokį gyvenimo etapą, kai jo siela dažnai likdavo viena tyloje. Nepaisant poeto įsitikinimo, kad tyloje lieka tik tie, kurie nemoka klausytis, jaunuolis mokėjo įsiklausyti. Jis tikėjo, kad tyla kalba pati už save, ypač nakties ramybės metu. Jį įkvėpė kito kūrėjo filosofiniai ir poetiniai apmąstymai, kuriuose teigiama, kad nakties širdyje siela sugeria tamsos spindesį ir susilieja su tyla vienatvės, laisvės ir stiprybės būsenoje.
         Artėjant aušrai jaunuolis pajuto, kaip erdvė prisipildo šviesos, o pirmieji pabudimo šnaresiai sudrumsčia ramybę. Spalvos ir kontūrai įgavo jėgos ir ryškumo, išstumdami tamsą. Jaunuolis taip pat buvo įsimylėjęs poetas.
