--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
         <div class="box">
             <h2>Kontaktinė informacija</h2>
-            <a href="869512930"> <i class="fas fa-phone"></i> 869512930 </a>
+            <a href=""> <i class="fas fa-phone"></i> </a>
 
             <a href="bookinsman@gmail.com"> <i class="fas fa-envelope"></i> bookinsman@gmail.com </a>
         </div>
