--- a/readbookis/index.html
+++ b/readbookis/index.html
@@ -53,7 +53,7 @@
 
  <body>
   <div class="container">
-    <h1>"Turinys"</h1>
+    <h1>"Išminties formulė"</h1>
     <div class="text-container">
       <h2><strong>"Pradžia"</strong></h2>
       <p id="page1">Prieš du su puse tūkstančio metų ištarta Sokrato mintis "Pažink save" ir šiandien tebėra visuotinio masto įvykis, nes klausimas išlieka aktualus: kas vyksta su tavimi, “homo sapiens”? Ar praradai mąstymo dovaną, ar pamiršai, kaip mąstyti, ar tau tiesiog buvo padedama galvoti? Kartais atrodo, kad tuoj užgrius fizinių ir moralinių rūpesčių našta. Bet ne, kai krenti, vėl atsikeli ir eini toliau. Vėl krenti ir vėl keliesi…
