--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <header class="header">
     <div class="header-2">
 
+        
+
+
         <nav class="navbar">  
                 <ul>
                     <a href="#home">Apie mus</a>
@@ -49,6 +52,24 @@
 <!-- header section ends -->
 
 
+<section class="home" id="home">
+
+    <div class="container-fluid">
+ 
+       <div class="content">
+          <h2>online <span>edukacija</span></h2>
+       </div>
+ 
+       
+ 
+       <div class="image">
+          <img src="https://lh3.googleusercontent.com/pw/AIL4fc-_q6snIRBysUB-c5YE7XLAhlh6TV16W8cdmgI2qSehQt5N8VuCW5ayKAIQUXQEAoC3tgdF3jV-IvlVnv8FbDOaJ2_oKsYIa7hQ3t54MgTUABoRbic=w2400" alt="">
+       </div>
+ 
+    </div>
+ 
+ </section>
+
 <!-- home section starts  -->
 <section class="nanik">
 
@@ -60,8 +81,7 @@
 
     <div class="content">
         <h1>Nori žinoti daugiau, bet neturi laiko?</h1>
-        <p>Jokių problemų! "Elektroninė skaityklė" yra geriausias būdas išlaikyti savo smegenis aštrias. 
-            Sužinok daugiau su mažiau pastangų. </p>
+        <p>Jokių problemų! Įgyvendinkite savo mokymosi tikslus per trečdalį laiko. </p>
     </div>
 
 </section>
