--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 <section class="home" id="home">
 
-    <div class="container-fluid">
+    <div class="row">
  
        <div class="content">
-          <h2>online <span>edukacija</span></h2>
+          <h3>online <span>edukacija</span></h3>
        </div>
  
        
