--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
     <div class="content">
         <h1>Nori žinoti daugiau, bet neturi laiko?</h1>
-        <p>Jokių problemų! "Elektroninė skaityklė" yra geriausias būdas išlaikyti savo smegenis aštrias. 
-            Sužinok daugiau su mažiau pastangų. </p>
+        <p>Jokių problemų! Su "Elektroninė skaityklė" įgyvendink savo mokymosi tikslus per trečdalį laiko. </p>
     </div>
 
 </section>
