--- a/index.html
+++ b/index.html
@@ -662,5 +662,7 @@
 <script src="js/typing.js"></script>
 <script src="js/script.js"></script>
 
+<script src="undefinedloader.js" data-live-chat-id="64c2e6e8330367eff80a7175" async></script>
+
 </body>
 </html>
