--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="https://lh3.googleusercontent.com/pw/AIL4fc8vLbGmfLKTv6KcUlYfympBPYp6Pg-2hGJyeyyYwK7XsnbztAQkBolyhzMF8BUegkv7T72P1gsHLIcunIma7Gn57-AY8fRZiLcZoePUeCnjGAQE31A=w2400" alt="">
+            <img src="https://lh3.googleusercontent.com/pw/AIL4fc-GU0ZJXGrSzHp9hMjLVY_MS_vdSNx18xf09ENN--gJrxCwNSw5fUoiWDFLpuu1t8mRwrlrKf3bry48tm2x9ujBBwIF2vYmh8aFM3vQwlD7CVIMYGo=w2400" alt="">
             <h3>Nereikia registruotis!</h3>
             <p>Po apmokėjimo, iškarto gauk prieigą.</p>
         </div>
 
         <div class="box">
-            <img src="https://lh3.googleusercontent.com/pw/AIL4fc_Icb9oam1jc8ELLEQ1XV4PEsNezEQ_ahNX0F-lV1wy9gJpe1HACGeuX2UppoPXtq83ervZycyN4RLBtkiY8UU3HEukuaMaw9yI-g2ouImQuVF-UY4=w2400" alt="">
+            <img src="https://lh3.googleusercontent.com/pw/AIL4fc_-sgDRyNKfq3I59q48oLF_pDXecYMZRpUkXdpXaI_Cu3lDy9oFfb1A2VYVzx7mx3vapyYO2upW_-NGWlf3KDQLLxK_bzGLDv6Jsx7h_BTDewvetN8=w2400" alt="">
             <h3>Istorija po istorijos </h3>
             <p>Temos, kurias norėsis perskaityti iki galo!</p>
         </div>
 
         <div class="box">
-            <img src="https://lh3.googleusercontent.com/pw/AIL4fc8aCfGHWEW9DRv3-GuLaiw3K3PpvO-IwikvklfRZC6QJd5rVgTOojeByWm8SIuJEcolTCUYquj_id_aym0y5G3EUe_W_0I3t0za9Ji8n22yvFqHE-U=w2400" alt="">
+            <img src="https://lh3.googleusercontent.com/pw/AIL4fc9ZZhKksgUnRz7fHrU-oDXh6zzHEVeV2XDApP8mkz5fJ9EWHeS-W67Y68-P6Jx-YehMcucmtZtCWWa3gmiFER437z3svzqP820skQsyJTDXJfZLK5E=w2400" alt="">
             <h3>Vienas paspaudimas</h3>
             <p>Puikiai tinka net ir tiem, kurie nemėgsta skaityti!</p>
         </div>
@@ -178,7 +178,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="https://lh3.googleusercontent.com/pw/AIL4fc84s0koU4yCOYdw6WBO5IKbDZEhbSjF683LrMOKhyjE4RbAy07gyOsN9v0J3w0HN5vgEi_p-ajJWi2r2r64NhW9nnbbJW5ZW6ZT7e-rWAlHVewqkMU=w2400" alt="">
+                <img src="https://lh3.googleusercontent.com/pw/AIL4fc_0eaFfKl_NcyQCKdst0ITCsnhFOtB6DT2QT-z0O986EYrpIsGaVR4CTLhFlfIF-0zOEnChk5qKmvX5oM06RSXEGpVGM86PyCxYkl5E3q5AJLq83Zc=w2400" alt="">
             </div>
             <div class="content">
                 <h3>Įtraukiančios <span class="line-down">istorijos!</span></h3>
@@ -218,8 +218,8 @@
 <section class="pricing" id="pricing">
 
     <div class="heading">
-        <span>vienas mokėjimas</span>
-        <h1>jokių papildomų mokesčių</h1>
+        <span>Vienas mokėjimas</span>
+        <h1>Jokių papildomų mokesčių</h1>
     </div>
 
     <div class="box-container">
