--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="content">
         <h3> <span class="line-down">Saviugdos</span> programa paaugliams! </h3>
         <p>Ar esate žinių ištroškęs paauglys, bet tradicinis mokymas jums atrodo nuobodus? Norite mokytis savarankiškai, bet sunku įsipareigoti skaityti ilgos apimties medžiagą? Ne problema! Sukūrėme unikalią platformą, skirtą specialiai tokiems paaugliams kaip jūs, kurie nori mokytis be vargo.</p>
-        <h1><img src="https://lh3.googleusercontent.com/pw/AIL4fc96cBzW4vZrE6e0soLsQC5kVm26xRatqN2yuL_VPUTtHD3va0CNPLefKl58ocAmKDLoEfnbd0LYz5cOFDKUr_x3AAXA0p3UKrg2Hd9kKDR4rovngfg=w2400" alt="logo"/></h1>
+        <h1><img src="https://lh3.googleusercontent.com/pw/AIL4fc-80aanDhEnSdxgldVECUJ3pMIUAJzGFclO52-An5sgXW9N3NA2_0Zr8bP3nRPcPFWwgvEHhk4QIgJgj5jYHykegqSvAouGz8vUVxCDA_0D_a4wnQg=w2400" alt="Company Logo" width="200px" height="100px" /></h1>
 
     </div>
 
